# CMakeQtTest

./: .gitignore  CMakeLists.txt  README.md
cmake/: External-Qt.cmake
